# yaniv-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  config.json.example  example-config.json  quotes.txt.example  requirements-dev.txt  requirements.txt  setup.cfg  startup.sh  tox.ini  yaniv_bot.py
.github/workflows/: main.yml
cogs/: admin.py  basic.py  steam.py
core/: checks.py  errors.py
tests/core/: test_utils.py
utils/: checks.py  config.py
yaniv_bot/: __main__.py  bot.py
yaniv_bot/cogs/: steam.py
yaniv_bot/cogs/admin/: admin.py
yaniv_bot/cogs/basic/: basic.py
yaniv_bot/cogs/steam/: steam.py
yaniv_bot/core/: checks.py  config.py  utils.py
