[metadata]
name = yaniv-bot
version = 0.0.2
description = Discord bot created using the discord.py library.
long_description = file: README.md
url = https://github.com/Jharopa/yaniv-bot
author = Alexander Burns
license  = MIT

[options]
ptyhon_requires = >=3.11
packages = find:
install_requires =
    discord.py
    requests

[options.entry_points]
console_scripts = yaniv-bot = yaniv_bot.__main__:main

[flake8]
extend-ignore = E501
exclude = build,.git

[isort]
profile = black
default_section = THIRDPARTY
